<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteActivity">

    <TextView
        android:id="@+id/lbl_note_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:alpha="0.56"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_note_name"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:hint="@string/entity_name_title"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/lbl_note_app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_note_value"
        android:layout_width="269dp"
        android:layout_height="350dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:text="@string/note_value_title"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_note_name" />

    <Button
        android:id="@+id/btn_note_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entity_add_btn"
        android:layout_marginBottom="25dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_note_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entity_edit_btn"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/btn_note_add"
        app:layout_constraintBottom_toBottomOf="@id/btn_note_add"
        app:layout_constraintEnd_toStartOf="@id/btn_note_add" />

    <Button
        android:id="@+id/btn_note_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entity_delete_btn"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/btn_note_add"
        app:layout_constraintBottom_toBottomOf="@id/btn_note_add"
        app:layout_constraintStart_toEndOf="@id/btn_note_add" />

</androidx.constraintlayout.widget.ConstraintLayout>